name:                nix-quote-urls
version:             0.1.0.0
synopsis:            Quotes all Nix URLs that aren't quoted already
license:             MIT
license-file:        LICENSE
author:              Silvan Mosberger
maintainer:          infinisil@icloud.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable nix-quote-urls
  main-is:             Main.hs
  ghc-options:         -Wall
  other-modules:       Options
  build-depends:       base >=4.11
                     , hnix
                     , text
                     , containers
                     , megaparsec
                     , prettyprinter
                     , optparse-applicative
                     , data-fix
  hs-source-dirs:      src
  default-language:    Haskell2010
